--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,33 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  height: 4em;
+  /* padding: 1.5em; */
   will-change: filter;
   transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.team {
+  display: flex;
+  margin-left: 0;
+}
+
+nav {
+  display: flex;
+  margin-top: 0.5vh;
+  margin-bottom: 0.5vh;
+}
+
+.Frame {
+  padding: 2rem;
 }
 
 @media (prefers-reduced-motion: no-preference) {
