--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+  @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
   /* padding: 2rem; */
   text-align: center;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 .logo {
@@ -31,10 +34,40 @@ nav {
   padding: 2rem;
 }
 
-.card {
-  padding: 2em;
+.container {
+  margin-bottom: auto;
 }
 
-.read-the-docs {
-  color: #888;
+.container, .inner_input_button {
+  display: flex;
+  width: 100vw;
+  flex-direction: column;
+}
+
+.inner_input {
+  margin: auto 20px;
+  margin-top: 60px;
+  padding: 20px;
+  height: 10vh;
+  background-color: #202020;
+  border-radius: 10px;
+  text-align: left;
+  box-sizing: border-box;
+}
+
+.inner_button , .submit{
+  margin-left: auto;
+  margin-right: 10vw;
+  margin-top: 20px 10vw 20px auto;
+  margin: 20px;
+  margin-left: auto;
+  padding: 4px 8px;
+  width: 100px;
+  height: 26;
+}
+
+.inner_input_button .submit {
+  height: 100px;
+  font-size: 20px;
+  color: white;
 }
