--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,12 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  /* padding: 2rem; */
   text-align: center;
-  font-family: 'Source Sans Pro', sans-serif;
 }
 
+* {
+    font-family: 'Source Sans Pro', sans-serif;
+}
 .logo {
   height: 4em;
   /* padding: 1.5em; */
@@ -47,18 +48,22 @@ nav {
 .inner_input {
   margin: auto 20px;
   margin-top: 60px;
-  padding: 20px;
+  padding: 10px;
   height: 10vh;
+  width: 332px;
   background-color: #202020;
   border-radius: 10px;
   text-align: left;
   box-sizing: border-box;
+  border: solid gray 1px;
+  font-size: 20px;
+  line-height: 1.5;
 }
 
 .inner_button , .submit{
   margin-left: auto;
   margin-right: 10vw;
-  margin-top: 20px 10vw 20px auto;
+  /* margin-top: 20px 10vw 20px auto; */
   margin: 20px;
   margin-left: auto;
   padding: 4px 8px;
