--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
     font-family: 'Source Sans Pro', sans-serif;
 }
 .logo {
+  position:absolute;
   height: 4em;
   /* padding: 1.5em; */
   will-change: filter;
@@ -75,4 +76,14 @@ nav {
   height: 100px;
   font-size: 20px;
   color: white;
+}
+
+.Load{
+  height: 593px;
+}
+
+.picture {
+  position:absolute;
+  width: 100vw;
+  height: 100vh;
 }
