--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,93 @@
 
 * {
     font-family: 'Source Sans Pro', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+h2{
+  font-size: 40px;
+}
+h3{
+  font-size: 24px;
+}
+img{
+  vertical-align: top;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+}
+
+.about .team {
+  margin-top: auto;
+}
+
+.load .img{
+  margin-top: 100px;
+}
+
+.text ,.inner_input ,
+.inner_input_button .submit,
+.site{
+    color: white;
+}
+
+.result .text ,
+.site .text{
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 100px;
+  background-color: #2A2A2A;
+  padding: 15px 25px;
+  box-sizing: border-box;
+}
+
+.result .picture ,
+.site .picture{
+  z-index: -2;
+}
+
+.result .yes_or_no ,
+.site .yes_or_no{
+  width: 50vw;
+  text-align: left;
+  display: flex;
+  margin-left: auto;
+  padding: 5px 0px;
+  margin-top: 5px;
+}
+
+.result .yes_or_no ,
+.site .yes_or_no ,
+.inner_input_button .submit {
+  font-size: 20px;
+}
+
+.result .yes ,
+.site .yes {
+  /* margin-left: 20px; */
+  padding-left: 25px;
+}
+
+.place {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  position: absolute;
+  top: 40px;
+  margin-top: 150px;
+  padding-left: 10%;
+  box-sizing: border-box;
+  text-align: left;
 }
 
 .team {
+  position: fixed;
+  /* top: 100px; */
+  bottom: 0px;
   display: flex;
   margin-left: 0;
 }
@@ -55,8 +139,6 @@ nav{
 
 .inner_input_button .submit {
   height: 100px;
-  font-size: 20px;
-  color: white;
 }
 
 .Load{
@@ -66,7 +148,7 @@ nav{
 .logo {
   position: fixed;
   top: 50px;
-  width: 100%;
+  width: 100vw;
   height: 4em;
   will-change: filter;
   transition: filter 300ms;
@@ -74,3 +156,4 @@ nav{
   margin-right: auto;
   line-height: 0;
 }
+
